# dataset-rs

./: .deny.toml  .gitignore  .gitmodules  .rustfmt.toml  .typos.toml  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  daily.yml
crates/datapod/: Cargo.toml
crates/datapod/src/: cli.rs  config.rs  datapod.rs  document.rs  error.rs  main.rs  utils.rs
crates/datapod/src/commands/: archive.rs  config.rs  index.rs  init.rs  mod.rs  restore.rs  status.rs  verify.rs  version.rs
crates/dataset/: Cargo.toml
crates/dataset/src/: cli.rs  config.rs  dataset.rs  error.rs  main.rs  prelude.rs  progress.rs  remote.rs  vocab.rs
crates/dataset/src/commands/: completions.rs  config.rs  fetch.rs  init.rs  mod.rs  remote.rs  version.rs  vocab.rs
crates/datashed/: Cargo.toml
crates/datashed/src/: cli.rs  config.rs  datashed.rs  doctype.rs  document.rs  error.rs  kindmap.rs  lfreq.rs  main.rs  mscmap.rs  prelude.rs  utils.rs
crates/datashed/src/commands/: archive.rs  clean.rs  completions.rs  config.rs  grep.rs  index.rs  init.rs  lfreq.rs  mod.rs  rate.rs  restore.rs  select.rs  serve.rs  status.rs  summary.rs  user.rs  verify.rs  version.rs  vocab.rs
crates/datashed/src/commands/bibrefs/: ddc.rs  isbn.rs  isni.rs  issn.rs  mod.rs  orcid.rs
crates/datashed/src/commands/index/: kind.rs  mod.rs  msc.rs
crates/rdf-tools/: Cargo.toml
docs/: CONTRIBUTING.md  INSTALL.md  README.md
docs/partials/: katex.html
scripts/: check-dco.sh
src/: cli.rs  config.rs  dataset.rs  document.rs  error.rs  lang.rs  lib.rs  main.rs  remote.rs
src/commands/: config.rs  init.rs  mod.rs  remote.rs  update.rs  verify.rs  version.rs
