[package]
name = "dataset"
authors = ["Nico Wagner <n.wagner@dnb.de>"]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.79.0"
version = "0.1.0"

[[bin]]
name = "dataset"
path = "src/bin/main.rs"

[dependencies]

[workspace]
members = ["crates/datashed"]
resolver = "2"

[workspace.package]
authors = ["Nico Wagner <n.wagner@dnb.de>"]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.79.0"

[workspace.dependencies]
bstr = { version = "1.9.1", features = ["unicode"] }
glob = { version = "0.3.1" }
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = { version = "1.10.0" }
regex = { version = "1.10.5" }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = { version = "1.0" }
toml = { version = "0.8.14", features = ["preserve_order"] }

dataset = { path = "." }

[workspace.dependencies.clap]
features = ["cargo", "derive", "wrap_help", "usage", "env"]
version = "4.5"

[workspace.dependencies.polars]
version = "0.41.3"
features = ["ipc", "dtype-categorical", "dtype-struct", "lazy", "is_in"]
