[workspace]
resolver = "2"
default-members = ["crates/dataset"]
members = [
    "crates/datashed",
    "crates/dataset",
]

[workspace.package]
authors = ["Nico Wagner <n.wagner@dnb.de>"]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.80.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
approx = { version = "0.5.1" }
bstr = { version = "1.9.1", features = ["unicode"] }
clap_complete = { version = "4.5.12" }
glob = { version = "0.3.1" }
hashbrown = { version = "0.14.5" }
humansize = { version = "2.1.3" }
indicatif = { version = "0.17.8", features = ["rayon"] }
ndarray = { version = "0.15.6" }
ndarray-stats = { version = "0.5.1" }
rayon = { version = "1.10.0" }
regex = { version = "1.10.5" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = { version = "1.0" }
tokio = { version = "1.39.2", features = ["full"] }
toml = { version = "0.8.14", features = ["preserve_order"] }

[workspace.dependencies.clap]
features = ["cargo", "derive", "wrap_help", "usage", "env"]
version = "4.5"

[workspace.dependencies.polars]
version = "0.41.3"
features = [
    "dtype-full",
    "ipc",
    "is_in",
    "lazy",
    "sql",
]

[profile.release]
panic = "abort"
opt-level = 3
strip = "symbols"
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = true
