[workspace]
resolver = "2"
default-members = ["crates/dataset"]
members = [
    "crates/datashed",
    "crates/dataset",
]

[workspace.package]
authors = ["Nico Wagner <n.wagner@dnb.de>"]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.83.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
approx = { version = "0.5" }
bstr = { version = "1.11", features = ["unicode"] }
clap_complete = { version = "4.5" }
csv = { version = "1.3" }
glob = { version = "0.3" }
hashbrown = { version = "0.15" }
humansize = { version = "2.1" }
indicatif = { version = "0.17", features = ["rayon"] }
ndarray = { version = "0.16" }
ndarray-stats = { version = "0.6" }
rayon = { version = "1.10" }
regex = { version = "1.11" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
tokio = { version = "1.43", features = ["full"] }
toml = { version = "0.8", features = ["preserve_order"] }

[workspace.dependencies.clap]
features = ["cargo", "derive", "wrap_help", "usage", "env"]
version = "4.5"

[workspace.dependencies.polars]
version = "0.45"
features = [
    "dtype-full",
    "ipc",
    "is_in",
    "lazy",
    "semi_anti_join",
    "sql",
]

[workspace.dependencies.pica-record]
git = "https://github.com/deutsche-nationalbibliothek/pica-rs.git"
branch = "main"

[profile.release]
panic = "abort"
opt-level = 3
strip = "symbols"
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = true
