[package]
name = "datapod"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
dataset = { path = "../../" }
rayon.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
