[package]
name = "datapod"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bstr.workspace = true
clap.workspace = true
glob.workspace = true
indicatif.workspace = true
polars.workspace = true
rayon.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

dataset = { path = "../../" }
