[package]
name = "datapod"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bstr = { workspace = true }
clap = { workspace = true }
comfy-table = { version = "7.1.1" }
dataset = { workspace = true }
flate2 = { version = "1.0.30" }
glob = { workspace = true }
indicatif = { workspace = true }
polars = { workspace = true }
rayon = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
sha2 = { version = "0.10.8" }
tar = { version = "0.4.41" }
thiserror = { workspace = true }
toml = { workspace = true }
