[package]
name = "dataset"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
csv = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
pica-record = { workspace = true, features = ["serde"] }
polars = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { version = "2.5.2", features = ["serde"] }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["performant", "unstable"]
nightly = ["pica-record/nightly", "polars/nightly"]
performant = ["pica-record/performant", "polars/cse", "polars/performant"]
unstable = ["pica-record/unstable"]
