[package]
name = "datashed"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-files = { version = "0.6.6" }
actix-web = { version = "4.8.0" }
bstr = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
comfy-table = { version = "7.1.1" }
csv = { version = "1.3.0" }
dialoguer = { version = "0.11.0" }
directories = { version = "5.0.1" }
env_logger = { version = "0.11.5" }
flate2 = { version = "1.0.30" }
glob = { workspace = true }
hashbrown = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
jemallocator = { version = "0.5.4" }
lingua = { version = "1.6.2" }
minus = { version = "5.6.1", features = ["search", "static_output"] }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
polars = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
sha2 = { version = "0.10.8" }
tar = { version = "0.4.41" }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
unicode-normalization = { version = "0.1.23" }
unicode_categories = { version = "0.1.1" }

[dependencies.pica-path]
git = "https://github.com/deutsche-nationalbibliothek/pica-rs.git"
features = ["serde"]
version = "0.25.0"

[dependencies.pica-matcher]
git = "https://github.com/deutsche-nationalbibliothek/pica-rs.git"
features = ["serde"]
version = "0.25.0"

[dependencies.pica-record]
git = "https://github.com/deutsche-nationalbibliothek/pica-rs.git"
version = "0.25.0"

[dev-dependencies]
anyhow = { workspace = true }
approx = { workspace = true }

[features]
performant = [
    "polars/cse",
    "polars/nightly",
    "polars/performant"
]
