[package]
name = "datashed"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-files = { version = "0.6.6" }
actix-web = { version = "4.9" }
bstr = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
comfy-table = { version = "7.1.1" }
csv = { workspace = true }
dialoguer = { version = "0.11.0" }
directories = { version = "6.0" }
env_logger = { version = "0.11.5" }
flate2 = { version = "1.0.30" }
glob = { workspace = true }
hashbrown = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
jemallocator = { version = "0.5.4" }
minus = { version = "5.6.1", features = ["search", "static_output"] }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
pica-record = { workspace = true, features = ["serde"] }
polars = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
sha2 = { version = "0.10.8" }
tar = { version = "0.4.41" }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
unicode-normalization = { version = "0.1.23" }
unicode_categories = { version = "0.1.1" }

[dependencies.lingua]
version = "1.6.2"
default-features = false
features = [
    "danish",
    "dutch",
    "english",
    "french",
    "german",
    "italian",
    "latin",
    "polish",
    "portuguese",
    "russian",
    "spanish",
]

[dev-dependencies]
anyhow = { workspace = true }
approx = { workspace = true }

[features]
default = ["performant", "unstable"]
nightly = ["pica-record/nightly", "polars/nightly", "hashbrown/nightly"]
performant = ["pica-record/performant", "polars/cse", "polars/performant"]
unstable = ["pica-record/unstable"]
