[package]
name = "datashed"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-files = { version = "0.6" }
actix-web = { version = "4.10" }
bstr = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
comfy-table = { version = "7.1" }
csv = { workspace = true }
dialoguer = { version = "0.11.0" }
directories = { version = "6.0" }
env_logger = { version = "0.11" }
flate2 = { version = "1.1" }
glob = { workspace = true }
hashbrown = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
jemallocator = { version = "0.5.4" }
lingua = { version = "1.7" }
minus = { version = "5.6.1", features = ["search", "static_output"] }
ndarray-stats = { workspace = true }
ndarray = { workspace = true }
pica-record = { workspace = true, features = ["serde"] }
polars = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
serde = { workspace = true }
sha2 = { version = "0.10.8" }
tar = { version = "0.4" }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
unicode_categories = { version = "0.1.1" }
unicode-normalization = { version = "0.1" }

[dev-dependencies]
anyhow = { workspace = true }
approx = { workspace = true }

[features]
default = ["performant", "unstable"]
nightly = ["pica-record/nightly", "polars/nightly", "hashbrown/nightly"]
performant = ["pica-record/performant", "polars/cse", "polars/performant"]
unstable = ["pica-record/unstable"]
